Refatorando sistemas de tratamento de erros