@@ -7,41 +7,37 @@ import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
-
 import com.exemplo.usuariosapi.dto.ErroResponse;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
-    @ExceptionHandler(UsuarioNaoEncontradoException.class)
-    public ResponseEntity<ErroResponse> tratarUsuarioNaoEncontrado(UsuarioNaoEncontradoException ex, HttpServletRequest request) {
-
-        ErroResponse erro = new ErroResponse(
-                "USER_NOT_FOUND",
+    private ErroResponse criarErro(
+            String code,
+            String message,
+            HttpStatus status,
+            String path,
+            List<String>errors
+    ){return new ErroResponse(
+            code,
+            message,
+            status.value(),
+            LocalDateTime.now(),
+            path,
+            errors);}
+    @ExceptionHandler(BaseException.class)
+    public ResponseEntity<ErroResponse> tratarBaseException(BaseException ex, HttpServletRequest request){
+        ErroResponse erro = criarErro(
+                ex.getCode(),
                 ex.getMessage(),
-                404,
-                LocalDateTime.now(),
+                ex.getStatus(),
                 request.getRequestURI(),
-                List.of() // ou null
-        );
-
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(erro);
-    }
-
-    @ExceptionHandler(EmailDuplicadoException.class)
-    public ResponseEntity<ErroResponse> tratarEmailDuplicado(EmailDuplicadoException ex, HttpServletRequest request){
-        ErroResponse erro = new ErroResponse(
-                "EMAIL_DUPLICADO",
-                ex.getMessage(),
-                400,
-                LocalDateTime.now(),
-                request.getRequestURI(),
-                List.of()//sem lista de erros
-                );
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(erro);
-    }
-
+                Collections.emptyList()
+        ); return ResponseEntity
+                .status(ex.getStatus())
+                .body(erro);}
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ErroResponse> tratarValidacao(MethodArgumentNotValidException ex, HttpServletRequest request){
         List<String> errors = ex.getBindingResult()
@@ -50,16 +46,23 @@ public class GlobalExceptionHandler {
                 .map(error -> error.getDefaultMessage())
                 .toList();
 
-        ErroResponse erro = new ErroResponse(
+        ErroResponse erro = criarErro(
                 "VALIDATION_ERROR",
                 "Erro de validação",
-                400,
-                LocalDateTime.now(),
+                HttpStatus.BAD_REQUEST,
                 request.getRequestURI(),
-                errors
-        );
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(erro);
-    }
+                errors);
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(erro);}
+
+    @ExceptionHandler(Exception.class)
+    public ResponseEntity<ErroResponse> tratarErroGenerico(Exception ex, HttpServletRequest request){
+        ErroResponse erro = criarErro(
+                "INTERNAL_ERROR",
+                "Erro interno inesperado",
+                HttpStatus.INTERNAL_SERVER_ERROR,
+                request.getRequestURI(),
+                Collections.emptyList());
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(erro);}
 
 }
 
